--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <!--    1  -->
 
 <header class="header bg-title position-relative">
-    <div class="d-n media-breakpoint position-fixed z-index-5"></div>
+<!--    <div class="d-n media-breakpoint position-fixed z-index-5"></div>-->
     <div class="container position-relative">
 
         <nav class="d-none d-lg-flex navbar navbar-expand-lg">
@@ -145,19 +145,19 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto h4">
                     <li class="nav-item active">
-                        <a class="nav-link menu-hover" href="#">Prices</a>
+                        <a class="nav-link menu-hover pr-40" href="#">Prices</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-hover" href="#">Booking</a>
+                        <a class="nav-link menu-hover pr-40" href="#">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-hover" href="#">Blog</a>
+                        <a class="nav-link menu-hover pr-40" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-hover" href="#">Services</a>
+                        <a class="nav-link menu-hover pr-40" href="#">Services</a>
                     </li>
                 </ul>
-                <div class="search pos-rel d-flex justify-content-end">
+                <div class="search pos-rel d-flex justify-content-end ml-30 mr-20">
                     <a href="#" class="text-white">
                         <svg>
                             <use xlink:href="#icon-search"></use>
@@ -202,7 +202,7 @@
 
 <!--    2  -->
 
-<section class="results bg-white position-relative">
+<section class="results bg-white position-relative wow zoomIn">
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <h2 class="my-h2 mb-0">Stunning Results</h2>
@@ -267,7 +267,7 @@
 
 <!--    3  -->
 
-<section class="what bg-clients position-relative">
+<section class="what bg-clients position-relative wow zoomIn">
     <div class="container py-45 py-md-50 py-xl-55 text-center">
 
         <h2 class="my-h2 text-white mb-0">What Clients are saying</h2>
@@ -357,7 +357,7 @@
 
 <!--    4  -->
 
-<section class="products bg-white position-relative">
+<section class="products bg-white position-relative wow zoomIn">
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <h2 class="my-h2 mb-0">Recent Products</h2>
@@ -468,7 +468,7 @@
 
 <!--    5  -->
 
-<section class="selling bg-primary position-relative">
+<section class="selling bg-primary position-relative wow zoomIn">
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <h2 class="my-h2 mb-0">Start Selling Instantly</h2>
@@ -489,7 +489,7 @@
 
 <!--    6  -->
 
-<section class="testimonials bg-white position-relative">
+<section class="testimonials bg-white position-relative wow zoomIn">
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <h2 class="d-xl-none my-h2 mb-0">Testimonials</h2>
@@ -609,13 +609,13 @@
 
 <!--    7  -->
 
-<section class="plans bg-lighter position-relative">
+<section class="plans bg-lighter position-relative wow zoomIn">
     <div class="container py-45 py-md-50 py-xl-55 text-center">
         <h5 class="my-h2 mb-0">Subscribing Plans</h5>
         <div class="plans-sect row d-flex justify-content-around flex-wrap">
-            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
-                <div class="cards wow fadeIn bg-white pos-rel">
-                    <div class="plan-picture-div position-relative mb-30 mb-md-20">
+            <div class="plans-t col-10 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards cards-hover bg-white pos-rel">
+                    <div class="plan-picture-div mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_1313921.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
                             <div class="price-title caption-3 pt-20 pt-xl-40 text-white">FREEMIUM</div>
@@ -625,16 +625,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Basic Collections<br>10 Messages<br>50 Images per Day
+                    <div class="plan-content pb-30 px-30 pb-xl-40 px-xl-40 x-center flex-column">
+                        <div class="plan-descr text-size-1 mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Basic Collections<br>10 Messages<br>50 Images per Day
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
-                <div class="cards wow pulse bg-white pos-rel">
-                    <div class="plan-picture-div position-relative mb-30 mb-md-20">
+            <div class="plans-t col-10 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards cards-hover bg-white pos-rel">
+                    <div class="plan-picture-div mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_2161835.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
                             <div class="price-title caption-3 pt-20 pt-xl-40 text-white">START UP</div>
@@ -644,16 +644,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Multiple Collections<br>100 Messages<br>100 Images per Day
+                    <div class="plan-content pb-30 px-30 pb-xl-40 px-xl-40 x-center flex-column">
+                        <div class="plan-descr text-size-1 mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Multiple Collections<br>100 Messages<br>100 Images per Day
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
-                <div class="cards wow bounce bg-white pos-rel">
-                    <div class="plan-picture-div position-relative mb-30 mb-md-20">
+            <div class="plans-t col-10 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards cards-hover bg-white pos-rel">
+                    <div class="plan-picture-div mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_3759234.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
                             <div class="price-title caption-3 pt-20 pt-xl-40 text-white">BUSINESS</div>
@@ -663,16 +663,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>500 Messages<br>300 Images per Day<br>Project Reviews
+                    <div class="plan-content pb-30 px-30 pb-xl-40 px-xl-40 x-center flex-column">
+                        <div class="plan-descr text-size-1 mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>500 Messages<br>300 Images per Day<br>Project Reviews
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
-                <div class="cards wow pulse bg-white pos-rel">
-                    <div class="plan-picture-div position-relative mb-30 mb-md-20">
+            <div class="plans-t col-10 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards cards-hover bg-white pos-rel">
+                    <div class="plan-picture-div mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_415695278.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
                             <div class="price-title caption-3 pt-20 pt-xl-40 text-white">ENTERPRISE</div>
@@ -682,8 +682,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>Unlimited Messages<br>Unlimited Images per Day<br>Project Reviews
+                    <div class="plan-content pb-30 px-30 pb-xl-40 px-xl-40 x-center flex-column">
+                        <div class="plan-descr text-size-1 mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>Unlimited Messages<br>Unlimited Images per Day<br>Project Reviews
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
@@ -695,7 +695,7 @@
 
 <!--    8  -->
 
-<section class="get-in bg-touch position-relative">
+<section class="get-in bg-touch position-relative wow zoomIn">
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <div class="my-h2 text-white mb-0">Get in Touch</div>
@@ -708,8 +708,8 @@
                         <input class="input input-form input-border"
                                id="email" type="text" placeholder="Email*">
                         <textarea class="input input-form input-border textarea-height" placeholder="Message"></textarea>
-                        <div class="checked-sect y-center text-light z-index-1 mb-10 mb-xl-20">
-                            <label class="checkbox-label y-center">
+                        <div class="checked-sect text-light z-index-1 mb-10 mb-xl-20">
+                            <label class="checkbox-label x-center">
                                 <input type="checkbox" class="checkbox" />
                                 <div class="custom-checkbox bg-primary xy-center position-relative b-radius-4 text-light mr-15">
                                     <svg class="text-lighter">
@@ -719,13 +719,13 @@
                                 <div class="checked-text text-size-1 text-nowrap">Most Urgent Question</div>
                             </label>
                         </div>
-                            <a href="#" class="my-btn main-btn-size bg-primary text-dark text-uppercase z-index-1 px-40">submit</a>
+                        <a href="#" class="my-btn main-btn-size bg-primary text-dark text-uppercase z-index-1 px-40">submit</a>
                     </form>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-10">
+            <div class="col-10 marg-cent">
                 <div class="d-md-flex justify-content-center pt-45 pt-md-0 pr-xl-25">
                     <div class="address y-center text-white text-nowrap mr-md-45">
                         <svg width="20" height="20">
@@ -756,7 +756,7 @@
 
 <!--    9  -->
 
-<footer class="footer bg-darker position-relative">
+<footer class="footer bg-darker position-relative wow zoomIn">
     <div class="container py-45 py-md-50 py-xl-55">
 
         <div class="footer-up">
@@ -844,7 +844,7 @@
                     </div>
                 </div>
 
-                <div class="col-9 text-white text-center text-md-left text-size-1 pt-25">
+                <div class="col-9 text-white marg-cent text-center text-md-left text-size-1 pt-25">
                     © 2019 Hofmann UI Kit <br> Created by Goldenfox — okodesign.net
                 </div>
             </div>
