--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="burger d-lg-none" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="burger-bar"></div>
                 <div class="burger-bar"></div>
-                <div class="burger-bar burger-half"></div>
+                <div class="burger-bar"></div>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto h4">
