--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <!--    1  -->
 
 <header class="header bg-title position-relative">
-    <div class="d-n media-breakpoint position-fixed z-index-5"></div>
+<!--    <div class="d-n media-breakpoint position-fixed z-index-5"></div>-->
     <div class="container position-relative">
 
         <nav class="d-flex navbar navbar-expand-lg border">
@@ -162,7 +162,7 @@
                         <a class="nav-link menu-hover pr-40" href="#">Services</a>
                     </li>
                 </ul>
-                <div class="search d-flex pos-rel justify-content-end ml-30 mr-20">
+                <div class="search d-none d-lg-flex pos-rel justify-content-end ml-30 mr-20">
                     <a href="#" class="text-white">
                         <svg>
                             <use xlink:href="#icon-search"></use>
