--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <!--    <div class="d-n media-breakpoint position-fixed z-index-5"></div>-->
     <div class="container position-relative">
 
-        <nav class="d-flex navbar navbar-expand-lg border">
+        <nav class="d-flex navbar navbar-expand-lg">
             <a href="#" class="logo-small">
                 <img src="images/kofmann.png" alt="">
             </a>
