--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
         <nav class="d-flex navbar navbar-expand-lg">
             <a href="#" class="logo-small">
-                <img src="images/kofmann.png" alt="">
+                <img class="ml-25 ml-lg-0" src="images/kofmann.png" alt="">
             </a>
-            <div class="burger d-lg-none" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="burger d-lg-none mr-25" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="burger-bar"></div>
                 <div class="burger-bar"></div>
                 <div class="burger-bar"></div>
